# nokogiri

./: .autotest  .codeclimate.yml  .cross_rubies  .deepsource.toml  .editorconfig  .gitignore  .gitmodules  .hoerc  .rubocop.yml  .rubocop_exclude.yml  .rubocop_todo.yml  .travis.yml  .yardopts  AGENTS.md  CHANGELOG.ja.rdoc  CHANGELOG.md  CHANGELOG.rdoc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  C_CODING_STYLE.rdoc  FFI-TODO  Gemfile  Gemfile-libxml-ruby  History.ja.txt  History.txt  Jarfile  LICENSE-DEPENDENCIES.md  LICENSE.md  LICENSE.txt  Manifest.txt  PULL_REQUEST_TEMPLATE.md  README.ja.rdoc  README.ja.txt  README.md  README.rdoc  README.txt  README.txt.ja  ROADMAP.md  Rakefile  SECURITY.md  (+15 more)
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  Yimmeedependabot.yml  (+1 more)
gumbo-parser/: .gitignore  Makefile  Makefile.am  configure.ac  gperf-filter.sed
gumbo-parser/build-aux/: .gitignore
gumbo-parser/fuzzer/: build-ossfuzz.sh  build.sh  parse_fuzzer.cc
gumbo-parser/src/: Makefile  Makefile.am  ascii.c  attribute.h  char_ref.c  error.c  error.h  foreign_attrs.c  foreign_attrs.gperf  hashmap.c  hashmap.h  insertion_mode.h  nokogiri_gumbo.h  parser.c  replacement.h  string_buffer.c  string_buffer.h  string_piece.c  string_set.c  string_set.h  svg_attrs.c  svg_tags.c  svg_tags.gperf  tag.c  tag_lookup.c  tag_lookup.gperf  tag_lookup.h  token_buffer.c  token_buffer.h  tokenizer.c  tokenizer.h  utf8.c  utf8.h  util.c  util.h  vector.c  vector.h
gumbo-parser/test/: Makefile.am  parser.cc  string_buffer.cc  string_piece.cc  test_utils.h  tokenizer.cc  utf8.cc
(+1110 files in other folders)
