lib_LIBRARIES = libgumbo.a
libgumbo_a_SOURCES = \
	ascii.c \
	attribute.c \
	char_ref.c \
	error.c \
	foreign_attrs.c \
	parser.c \
	string_buffer.c \
	string_piece.c \
	svg_attrs.c \
	svg_tags.c \
	tag.c \
	tag_lookup.c \
	token_buffer.c \
	tokenizer.c \
	utf8.c \
	util.c \
	vector.c
include_HEADERS = nokogiri_gumbo.h
